--- a/settings.json
+++ b/settings.json
@@ -2,5 +2,10 @@
 	"apiUrl": "192.168.1.51:5000",
 	"telegramUrl": "https://t.me/js_by_vladilen",
 	"instUrl": "https://www.instagram.com/rudnev._.danil",
-	"supportUrl": "https://t.me/js_by_vladilen"
+	"supportUrl": "https://t.me/js_by_vladilen",
+	"defaultZoom": 12,
+	"mapCenter": {
+		"lat": 59.938955,
+		"lon": 30.315644
+	}
 }
