--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,8 @@
 {
 	"apiUrl": "http://94.154.130.179:5000",
-	"telegramUrl": "https://t.me/js_by_vladilen",
-	"instUrl": "https://www.instagram.com/rudnev._.danil",
-	"supportUrl": "https://t.me/js_by_vladilen",
+	"telegramUrl": "https://t.me/vanspot",
+	"instUrl": "https://www.instagram.com/vanspot",
+	"supportUrl": "https://t.me/vanspot",
 	"defaultZoom": 12,
 	"mapCenter": {
 		"lat": 59.938955,
